homelab/templates/nocodb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nocodb-ingress
spec:
  tls:
    - secretName: "le-cert"
    - hosts:
        - db.sethpyle.com
  rules:
    - host: db.sethpyle.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nocodb
                port:
                  number: 8080
